--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'application'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 sourceCompatibility = 1.8
-
+mainClassName = "com.thegumza.RubberApiService"
 repositories {
     mavenCentral()
 }
